fix header overflow

--- a/dash_app/apps/dash-singlecell-vr/assets/styles.css
+++ b/dash_app/apps/dash-singlecell-vr/assets/styles.css
@@ -3,6 +3,7 @@
     padding: 3%;
     min-height: 100vh;
     max-width: 100vw;
+    overflow: hidden;
 }
 
 body {
